completed the lab

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <%- include('./partial-views/header') %>
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h4>Click the link to move forward <a href="/skills">link</a></h4>
+    
   </body>
 </html>
