--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Express-Dev-Skills</title>
+    <%- include('../partial-views/header') %>
 </head>
 <body>
+    <a href="/">Back</a>
     <h1>My Skills</h1>
     <ul>
         <% skills.forEach(skill => { %>
