--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,2 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <%- include('./partial-views/header') %>
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <h4>Click the link to move forward <a href="/skills">link</a></h4>
-    
-  </body>
-</html>
+<%- include('./partials/header') %>
+<%- include('./partials/footer') %>
