added label to add skills

--- a/views/skills/new.ejs
+++ b/views/skills/new.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') %>
     <form action="/skills" method="POST">
-        <input type="text", name="skill">
-        <input type="text", name="proficiency">
+       <label >Skill: </label> <input type="text", name="skill">
+        <label >proficiency: </label><input type="text", name="proficiency">
         <button type = "submit">Save Skill</button>
     </form>
 <%- include('../partials/footer') %>
